--- a/mink_z6.css
+++ b/mink_z6.css
@@ -1,9 +1,9 @@
 body {
-    color: blue;
+    color: pink;
     font-size: 30pt;
 }
 
 p {
-    color: green;
+    color: blue;
     font-size: 20pt;
 }
