--- a/mink_z15.css
+++ b/mink_z15.css
@@ -1,9 +1,9 @@
 body {
-	color:#6FA35C;
+	color: rgb(141, 94 ,303 );
     font-size: 45pt;
 }
 
 p {
-    color: rgb(53%,36%,79%);
+    color: rgb(116, 166, 211);
     font-size: 35pt;
 }
